platforms/c/libsnips_hermes_full.h


typedef enum {
  SNIPS_GRAIN_YEAR = 0,
  SNIPS_GRAIN_QUARTER = 1,
  SNIPS_GRAIN_MONTH = 2,
  SNIPS_GRAIN_WEEK = 3,
  SNIPS_GRAIN_DAY = 4,
  SNIPS_GRAIN_HOUR = 5,
  SNIPS_GRAIN_MINUTE = 6,
  SNIPS_GRAIN_SECOND = 7,
} SNIPS_GRAIN;
typedef enum {
  SNIPS_PRECISION_APPROXIMATE = 0,
  SNIPS_PRECISION_EXACT = 1,
} SNIPS_PRECISION;
typedef enum {
  SNIPS_RESULT_OK = 0,
  SNIPS_RESULT_KO = 1,
} SNIPS_RESULT;
typedef enum {
  SNIPS_SESSION_INIT_TYPE_ACTION = 1,
  SNIPS_SESSION_INIT_TYPE_NOTIFICATION = 2,
} SNIPS_SESSION_INIT_TYPE;
typedef enum {
  SNIPS_SESSION_TERMINATION_TYPE_NOMINAL = 1,
  SNIPS_SESSION_TERMINATION_TYPE_SITE_UNAVAILABLE = 2,
  SNIPS_SESSION_TERMINATION_TYPE_ABORTED_BY_USER = 3,
  SNIPS_SESSION_TERMINATION_TYPE_INTENT_NOT_RECOGNIZED = 4,
  SNIPS_SESSION_TERMINATION_TYPE_TIMEOUT = 5,
  SNIPS_SESSION_TERMINATION_TYPE_ERROR = 6,
} SNIPS_SESSION_TERMINATION_TYPE;
typedef enum {
  SNIPS_SLOT_VALUE_TYPE_CUSTOM = 1,
  SNIPS_SLOT_VALUE_TYPE_NUMBER = 2,
  SNIPS_SLOT_VALUE_TYPE_ORDINAL = 3,
  SNIPS_SLOT_VALUE_TYPE_INSTANTTIME = 4,
  SNIPS_SLOT_VALUE_TYPE_TIMEINTERVAL = 5,
  SNIPS_SLOT_VALUE_TYPE_AMOUNTOFMONEY = 6,
  SNIPS_SLOT_VALUE_TYPE_TEMPERATURE = 7,
  SNIPS_SLOT_VALUE_TYPE_DURATION = 8,
  SNIPS_SLOT_VALUE_TYPE_PERCENTAGE = 9,
  SNIPS_SLOT_VALUE_TYPE_MUSICALBUM = 10,
  SNIPS_SLOT_VALUE_TYPE_MUSICARTIST = 11,
  SNIPS_SLOT_VALUE_TYPE_MUSICTRACK = 12,
} SNIPS_SLOT_VALUE_TYPE;
typedef struct {
  const void *facade;
  void *user_data;
} CAsrBackendFacade;
typedef struct {
  const char *site_id;
  const char *session_id;
  int64_t start_signal_ms;
} CAsrStartListeningMessage;
typedef struct {
  const char *site_id;
  const char *session_id;
} CSiteMessage;
typedef struct {
  const char *text;
  const CAsrTokenArray *tokens;
  float likelihood;
  float seconds;
  const char *site_id;
  const char *session_id;
} CTextCapturedMessage;
typedef struct {
  const void *facade;
  void *user_data;
} CAsrFacade;
typedef struct {
  const void *facade;
  void *user_data;
} CAudioServerBackendFacade;
typedef struct {
  const uint8_t *wav_frame;
  int wav_frame_len;
  const char *site_id;
} CAudioFrameMessage;
typedef struct {
  const char *id;
  const char *site_id;
} CPlayFinishedMessage;
typedef struct {
  const char *id;
  const uint8_t *wav_bytes;
  int wav_bytes_len;
  const char *site_id;
} CPlayBytesMessage;
typedef struct {
  const void *facade;
  void *user_data;
} CAudioServerFacade;
typedef struct {
  const void *handler;
  void *user_data;
} CProtocolHandler;
typedef struct {
  const void *facade;
  void *user_data;
} CDialogueBackendFacade;
typedef struct {
  const char *intent_name;
  float confidence_score;
} CNluIntentClassifierResult;
typedef struct {
  const void *value;
  SNIPS_SLOT_VALUE_TYPE value_type;
} CSlotValue;
typedef struct {
  CSlotValue value;
  const char *raw_value;
  const char *entity;
  const char *slot_name;
  int32_t range_start;
  int32_t range_end;
  float confidence_score;
} CSlot;
typedef struct {
  const CSlot *nlu_slot;
} CNluSlot;
typedef struct {
  const CNluSlot *const *entries;
  int count;
} CNluSlotArray;
typedef struct {
  const CAsrTokenArray *const *entries;
  int count;
} CAsrTokenDoubleArray;
typedef struct {
  const char *session_id;
  const char *custom_data;
  const char *site_id;
  const char *input;
  const CNluIntentClassifierResult *intent;
  const CNluSlotArray *slots;
  const CAsrTokenDoubleArray *asr_tokens;
  const float *asr_confidence;
} CIntentMessage;
typedef struct {
  const char *site_id;
  const char *session_id;
  const char *input;
  const char *custom_data;
  float confidence_score;
} CIntentNotRecognizedMessage;
typedef struct {
  SNIPS_SESSION_TERMINATION_TYPE termination_type;
  const char *data;
} CSessionTermination;
typedef struct {
  const char *session_id;
  const char *custom_data;
  CSessionTermination termination;
  const char *site_id;
} CSessionEndedMessage;
typedef struct {
  const char *session_id;
  const char *custom_data;
  const char *site_id;
} CSessionQueuedMessage;
typedef struct {
  const char *session_id;
  const char *custom_data;
  const char *site_id;
  const char *reactivated_from_session_id;
} CSessionStartedMessage;
typedef struct {
  const char *const *data;
  int size;
} CStringArray;
typedef struct {
  const char *session_id;
  const char *text;
  const CStringArray *intent_filter;
  const char *custom_data;
  const char *slot;
  unsigned char send_intent_not_recognized;
} CContinueSessionMessage;
typedef struct {
  const char *session_id;
  const char *text;
} CEndSessionMessage;
typedef struct {
  SNIPS_SESSION_INIT_TYPE init_type;
  const void *value;
} CSessionInit;
typedef struct {
  CSessionInit init;
  const char *custom_data;
  const char *site_id;
} CStartSessionMessage;
typedef struct {
  const void *facade;
  void *user_data;
} CDialogueFacade;
typedef struct {
  const char *site_id;
  const char *model_id;
} CHotwordDetectedMessage;
typedef struct {
  const void *facade;
  void *user_data;
} CHotwordFacade;
typedef struct {
  const void *facade;
  void *user_data;
} CInjectionFacade;
typedef struct {
  const char *last_injection_date;
} CInjectionStatusMessage;
typedef struct {
  const void *facade;
  void *user_data;
} CNluBackendFacade;
typedef struct {
  const void *facade;
  void *user_data;
} CNluFacade;
typedef struct {
  const char *id;
  const char *input;
  const CNluIntentClassifierResult *intent;
  const CNluSlotArray *slots;
  const char *session_id;
} CNluIntentMessage;
typedef struct {
  const char *input;
  const char *id;
  const char *session_id;
  float confidence_score;
} CNluIntentNotRecognizedMessage;
typedef struct {
  const char *input;
  const CAsrTokenArray *asr_tokens;
  const CStringArray *intent_filter;
  const char *id;
  const char *session_id;
} CNluQueryMessage;
typedef struct {
  const char *id;
  const char *input;
  const char *intent_name;
  const CNluSlot *slot;
  const char *session_id;
} CNluSlotMessage;
typedef struct {
  const char *input;
  const CAsrTokenArray *asr_tokens;
  const char *intent_name;
  const char *slot_name;
  const char *id;
  const char *session_id;
} CNluSlotQueryMessage;
typedef struct {
  const char *sound_id;
  const uint8_t *wav_sound;
  int wav_sound_len;
} CRegisterSoundMessage;
typedef struct {
  const char *id;
  const char *session_id;
} CSayFinishedMessage;
typedef struct {
  const char *text;
  const char *lang;
  const char *id;
  const char *site_id;
  const char *session_id;
} CSayMessage;
typedef struct {
  const void *facade;
  void *user_data;
} CTtsBackendFacade;
typedef struct {
  const void *facade;
  void *user_data;
} CTtsFacade;
typedef struct {
  const char *text;
  const CStringArray *intent_filter;
  unsigned char can_be_enqueued;
  unsigned char send_intent_not_recognized;
} CActionSessionInit;
typedef struct {
  const char *value;
  SNIPS_GRAIN grain;
  SNIPS_PRECISION precision;
} CInstantTimeValue;
typedef struct {
  const char *from;
  const char *to;
} CTimeIntervalValue;
typedef struct {
  const char *unit;
  float value;
  SNIPS_PRECISION precision;
} CAmountOfMoneyValue;
typedef struct {
  const char *unit;
  float value;
} CTemperatureValue;
typedef struct {
  int64_t years;
  int64_t quarters;
  int64_t months;
  int64_t weeks;
  int64_t days;
  int64_t hours;
  int64_t minutes;
  int64_t seconds;
  SNIPS_PRECISION precision;
} CDurationValue;
SNIPS_RESULT hermes_asr_backend_publish_start_listening(const CAsrBackendFacade *facade,
                                                        void (*handler)(const CAsrStartListeningMessage*, void*));
SNIPS_RESULT hermes_asr_backend_publish_stop_listening(const CAsrBackendFacade *facade,
                                                       void (*handler)(const CSiteMessage*, void*));
SNIPS_RESULT hermes_asr_subscribe_partial_text_captured(const CAsrFacade *facade,
                                                        void (*handler)(const CTextCapturedMessage*, void*));
SNIPS_RESULT hermes_asr_subscribe_text_captured(const CAsrFacade *facade,
                                                void (*handler)(const CTextCapturedMessage*, void*));
SNIPS_RESULT hermes_audio_server_backend_subscribe_all_play_bytes(const CAudioServerBackendFacade *facade,
                                                                  void (*handler)(const CPlayBytesMessage*, void*));
SNIPS_RESULT hermes_audio_server_backend_subscribe_play_bytes(const CAudioServerBackendFacade *facade,
                                                              const char *site_id,
                                                              void (*handler)(const CPlayBytesMessage*, void*));
SNIPS_RESULT hermes_audio_server_subscribe_all_play_finished(const CAudioServerFacade *facade,
                                                             void (*handler)(const CPlayFinishedMessage*, void*));
SNIPS_RESULT hermes_audio_server_subscribe_audio_frame(const CAudioServerFacade *facade,
                                                       const char *site_id,
                                                       void (*handler)(const CAudioFrameMessage*, void*));
SNIPS_RESULT hermes_audio_server_subscribe_play_finished(const CAudioServerFacade *facade,
                                                         const char *site_id,
                                                         void (*handler)(const CPlayFinishedMessage*, void*));
SNIPS_RESULT hermes_dialogue_backend_subscribe_continue_session(const CDialogueBackendFacade *facade,
                                                                void (*handler)(const CContinueSessionMessage*, void*));
SNIPS_RESULT hermes_dialogue_backend_subscribe_end_session(const CDialogueBackendFacade *facade,
                                                           void (*handler)(const CEndSessionMessage*, void*));
SNIPS_RESULT hermes_dialogue_backend_subscribe_start_session(const CDialogueBackendFacade *facade,
                                                             void (*handler)(const CStartSessionMessage*, void*));
SNIPS_RESULT hermes_dialogue_subscribe_intent(const CDialogueFacade *facade,
                                              const char *intent_name,
                                              void (*handler)(const CIntentMessage*, void*));
SNIPS_RESULT hermes_dialogue_subscribe_intent_not_recognized(const CDialogueFacade *facade,
                                                             void (*handler)(const CIntentNotRecognizedMessage*, void*));
SNIPS_RESULT hermes_dialogue_subscribe_intents(const CDialogueFacade *facade,
                                               void (*handler)(const CIntentMessage*, void*));
SNIPS_RESULT hermes_dialogue_subscribe_session_ended(const CDialogueFacade *facade,
                                                     void (*handler)(const CSessionEndedMessage*, void*));
SNIPS_RESULT hermes_dialogue_subscribe_session_queued(const CDialogueFacade *facade,
                                                      void (*handler)(const CSessionQueuedMessage*, void*));
SNIPS_RESULT hermes_dialogue_subscribe_session_started(const CDialogueFacade *facade,
                                                       void (*handler)(const CSessionStartedMessage*, void*));
SNIPS_RESULT hermes_hotword_subscribe_all_detected(const CHotwordFacade *facade,
                                                   void (*handler)(const CHotwordDetectedMessage*, void*));
SNIPS_RESULT hermes_hotword_subscribe_detected(const CHotwordFacade *facade,
                                               const char *hotword_id,
                                               void (*handler)(const CHotwordDetectedMessage*, void*));
SNIPS_RESULT hermes_injection_subscribe_injection_status(const CInjectionFacade *facade,
                                                         void (*handler)(const CInjectionStatusMessage*, void*));
SNIPS_RESULT hermes_nlu_backend_subscribe_partial_query(const CNluBackendFacade *facade,
                                                        void (*handler)(const CNluSlotQueryMessage*, void*));
SNIPS_RESULT hermes_nlu_backend_subscribe_query(const CNluBackendFacade *facade,
                                                void (*handler)(const CNluQueryMessage*, void*));
SNIPS_RESULT hermes_nlu_subscribe_intent_not_recognized(const CNluFacade *facade,
                                                        void (*handler)(const CNluIntentNotRecognizedMessage*, void*));
SNIPS_RESULT hermes_nlu_subscribe_intent_parsed(const CNluFacade *facade,
                                                void (*handler)(const CNluIntentMessage*, void*));
SNIPS_RESULT hermes_nlu_subscribe_slot_parsed(const CNluFacade *facade,
                                              void (*handler)(const CNluSlotMessage*, void*));
SNIPS_RESULT hermes_tts_backend_subscribe_register_sound(const CTtsBackendFacade *facade,
                                                         void (*handler)(const CRegisterSoundMessage*, void*));
SNIPS_RESULT hermes_tts_backend_subscribe_say(const CTtsBackendFacade *facade,
                                              void (*handler)(const CSayMessage*, void*));
SNIPS_RESULT hermes_tts_subscribe_say_finished(const CTtsFacade *facade,
                                               void (*handler)(const CSayFinishedMessage*, void*));